# Medical_Diagnostic_Center

./: .env.sample  .gitignore  README.md  db_backup.json  manage.py  project_structure.txt  pyproject.toml  pytest.ini  requirements.txt
Medical_Diagnostic_Center/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
appointments/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_initial.py  0003_remove_appointmentslot_doctor_and_more.py  0004_alter_appointmentslot_specialist.py  0005_alter_appointmentslot_specialist.py
authentication/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_customuser_address_customuser_country_and_more.py  0003_customuser_diagnostic_history_and_more.py  0004_customuser_activation_date_and_more.py  0005_remove_customuser_address_remove_customuser_country_and_more.py  0006_alter_customuser_gender.py
clinic/: admin.py  models.py  tests.py  urls.py  views.py
clinic/migrations/: 0001_initial.py  0002_alter_specialist_options_and_more.py  0002_specialist_contact_email_specialist_contact_phone_and_more.py  0003_specialist_age.py  0004_equipment.py
docs/source/: conf.py  index.rst
educational_resources/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
educational_resources/migrations/: 0001_initial.py  0002_resource_video_file.py  0003_resource_image.py
feedback/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
feedback/migrations/: 0001_initial.py  0002_alter_faq_answer_alter_faq_question.py
fixtures/appointments/: appointments.json
fixtures/authentication/: authentication.json
fixtures/clinic/: clinic.json
fixtures/educational_resources/: educational_resources.json
fixtures/feedback/: feedback.json
fixtures/online_consultations/: online_consultations.json
online_consultations/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  tests.py  urls.py  views.py
online_consultations/migrations/: 0001_initial.py  0002_remove_consultation_datetime_and_more.py  (+7 more)
scripts/: dump_appointments.py  dump_authentication.py  dump_clinic.py  dump_educational_resources.py  dump_feedback.py  dump_online_consultations.py
templates/: base.html  contacts.html  index.html  privacy_policy.html
(+38 files in other folders)
