[tool.poetry]
name = "medical-diagnostic-center"
version = "0.1.0"
description = ""
authors = ["Евгений Ермак <144560375+EvgeniiErmak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-crispy-forms = "^2.1"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"
channels = "^4.1.0"
django-allauth = "^0.61.1"
psycopg2 = "^2.9.9"
django-bootstrap4 = "^24.1"
django-storages = "^1.14.2"
django-ckeditor-5 = "^0.2.12"
django-summernote = "^0.8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
